--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=productservice
+
+springdoc.api-docs.path=/api-docs
+
+#create-drop creates tables when app starts and deletes them when app ends.
+#update also does something similar.
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
+spring.datasource.username=root
+spring.datasource.password=Toon4ever!
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#All the SQL statements that are run by the program appear in console output.
+spring.jpa.show-sql: true
