Entity Graph related code added to InstructorRepository.java.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,15 @@ spring.datasource.password=Toon4ever!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #All the SQL statements that are run by the program appear in console output.
 spring.jpa.show-sql: true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.use_sql_comments=true
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.orm.jdbc.bind=TRACE
+
+# Log the actual SQL statements
+#logging.level.org.hibernate.SQL=DEBUG
+# Log query parameters (bind values)
+#logging.level.org.hibernate.orm.jdbc.bind=TRACE
+
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
