--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,13 @@ spring.datasource.password=Toon4ever!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #All the SQL statements that are run by the program appear in console output.
 spring.jpa.show-sql: true
+server.port=8080
+
+
+
+
+
+
 #spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.properties.hibernate.use_sql_comments=true
 #logging.level.org.hibernate.SQL=DEBUG
